--- a/configs/gps/izat.conf
+++ b/configs/gps/izat.conf
@@ -48,10 +48,12 @@ NLP_COMBO_MODE_USES_QNP_WITH_NO_EULA_CONSENT = 1
 #########################################
 # NLP PACKAGE SETTINGS
 #########################################
-# OSNLP_PACKAGE has been deprecated and replaced
-# by system property ro.location.osnlp.package
-# REGION_OSNLP_PACKAGE has been deprecated and
-# replaced by system property ro.location.osnlp.region.package
+# OSNLP_PACKAGE: name of default NLP package
+OSNLP_PACKAGE = com.google.android.gms
+# REGION_OSNLP_PACKAGE:
+# This value will be used as alternative
+# for particular region where default NLP is not functional.
+#REGION_OSNLP_PACKAGE = com.baidu.map.location
 
 ###################################
 # GEOFENCE SERVICES
@@ -207,7 +209,7 @@ HARDWARE_TYPE=all
 PROCESS_NAME=engine-service
 PROCESS_ARGUMENT=DRE-INT libloc_epDr.so
 PROCESS_STATE=DISABLED
-PROCESS_GROUPS=gps diag inet qwes oem_2901 system
+PROCESS_GROUPS=gps diag inet
 PREMIUM_FEATURE=0
 IZAT_FEATURE_MASK=0
 PLATFORMS=all
@@ -225,7 +227,7 @@ HARDWARE_TYPE=all
 PROCESS_NAME=engine-service
 PROCESS_ARGUMENT=PPE libepsimulator.so
 PROCESS_STATE=DISABLED
-PROCESS_GROUPS=gps diag inet oem_2901
+PROCESS_GROUPS=gps diag inet
 PREMIUM_FEATURE=0
 IZAT_FEATURE_MASK=0
 PLATFORMS=all
